Add vision-based text extraction workflow with AI integration
Introduced a `VisionHandler` for text extraction and classification using LLMs. Updated Home page to include step-based UI for chunk processing and results visualization, and integrated new AI services with configuration support.

--- a/PdfExtract/Resources/Components/Pages/Home.resx
+++ b/PdfExtract/Resources/Components/Pages/Home.resx
@@ -21,4 +21,7 @@
     <data name="quality_selection" xml:space="preserve">
         <value>Qualité :</value>
     </data>
+    <data name="vision_summary" xml:space="preserve">
+        <value>Analyse chunk {0} / {1}</value>
+    </data>
 </root>
